<resources>
    <string name="app_name">SmartSetting</string>
    <string name="butler">管家服务</string>
    <string name="wechat">微信精选</string>
    <string name="beautifulGirl">美女如云</string>
    <string name="user">个人设置</string>
    <string name="setting">设置</string>
    <string name="startMain">进入主页</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="rememberPassword">记住密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetPassword">忘记密码?</string>
    <string name="introduction">简介</string>
    <string name="age">年龄</string>
    <string name="again">再输入一次</string>
    <string name="mail">邮箱</string>
    <string name="attention">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="no_thing"><![CDATA[这个人很懒,什么都没有留下%>_<%]]></string>
    <string name="text_two_input_not_consistent">两次密码不一致！</string>
    <string name="text_tost_empty">输入框不能为空！</string>
    <string name="text_registered_successful">注册成功!</string>
    <string name="text_registered_failure">注册失败!</string>
    <string name="login_successful">登录成功!</string>
    <string name="login_fail">登录失败:</string>
    <string name="emailverified">需要前往邮箱进行验证</string>
    <string name="change_password">修改密码</string>
    <string name="forget_possword">忘记密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="your_email">请输入您的邮箱</string>
    <string name="email_reset_password_successful">重置密码成功，请到邮箱进行密码重置</string>
    <string name="email_reset_password_fail">重置失败</string>
    <string name="isemail">请输入正确的邮箱</string>
    <string name="reset_successful">重置密码成功</string>
    <string name="dialog_login">正在登陆…</string>
    <string name="click_write">点击编辑</string>
    <string name="exit_successful">退出成功!</string>
    <string name="exit_fail">退出失败</string>
    <string name="update_successful">更新成功</string>
    <string name="update_fail">更新失败</string>
    <string name="cancel">取消</string>
    <string name="courier_name">快递名称</string>
    <string name="courier_number">快递单号</string>
    <string name="courier_query">查询物流</string>
    <string name="edit_phone_number">请输入手机号码</string>
    <string name="query_phone">归属地查询</string>
    <string name="phone_fail">输入框不能为空或者请输入正确的手机号码</string>
    <string name="query">查询</string>
    <string name="send">发送</string>
    <string name="send_content">输入内容</string>
    <string name="text_welfare">福利</string>
    <string name="concise">简洁</string>
    <string name="intelligence">智能</string>
    <string name="powerful">强大</string>
    <string name="speak">语音播报</string>
    <string name="start_speak">开启语音播报</string>
    <string name="stop_speak">语音播报已关闭</string>
    <string name="remind_message">短信提醒</string>
    <string name="stop_message">短信提醒已关闭</string>
    <string name="start_message">短信提醒已开启</string>
    <string name="new_versioncode">当前已经是最新版本</string>
    <string name="new_version">有新版本！</string>
    <string name="update">更新</string>
    <string name="download_success">下载成功</string>
    <string name="download_fail">下载失败</string>
    <string name="download_ok">下载完成</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
